# cmi-shmem

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  test.cc
include/: cmi-shmem-internal.hh  cmi-shmem.hh
src/: CMakeLists.txt  cmi-shm.cc  cmi-shmem.cc  cmi-xpmem.cc
